--- a/testify-fe/src/App.css
+++ b/testify-fe/src/App.css
@@ -20,3 +20,14 @@
 .App-link {
   color: #09d3ac;
 }
+
+h2 {
+  font-size: 3rem;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+
+@media (max-width: 500px) {
+  h2 {
+    font-size: 1.5rem;
+  }
+}
